--- a/app/components/Placeholder/placeholder.module.css
+++ b/app/components/Placeholder/placeholder.module.css
@@ -1,10 +1,22 @@
-.root {
+.video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.content {
   display: flex;
   height: 100vh;
   align-items: center;
   justify-content: center;
+  position: relative;
+  background: rgba(6, 4, 7, 0.5);
 }
 
 .title {
+  color: #F4ECE0;
   font-size: 15vw;
 }
