--- a/app/components/Placeholder/placeholder.module.css
+++ b/app/components/Placeholder/placeholder.module.css
@@ -1,7 +1,7 @@
 .video {
   object-fit: cover;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -10,6 +10,7 @@
 .content {
   display: flex;
   height: 100vh;
+  max-height: -webkit-fill-available;
   align-items: center;
   justify-content: center;
   position: relative;
