--- a/app/components/Placeholder/placeholder.module.css
+++ b/app/components/Placeholder/placeholder.module.css
@@ -1,23 +1,28 @@
+.root {
+  height: 100vh;
+  max-height: -webkit-fill-available;
+}
+
 .video {
-  object-fit: cover;
-  width: 100vw;
   height: 100%;
-  position: fixed;
-  top: 0;
   left: 0;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
 
 .content {
-  display: flex;
-  height: 100vh;
-  max-height: -webkit-fill-available;
   align-items: center;
+  background: var(--dark-overlay);
+  display: flex;
+  height: 100%;
   justify-content: center;
   position: relative;
-  background: rgba(6, 4, 7, 0.5);
 }
 
 .title {
-  color: #F4ECE0;
+  color: var(--bone);
   font-size: 15vw;
+  margin: 0;
 }
