Saving progress on phase 1

--- a/app/components/Placeholder/placeholder.module.scss
+++ b/app/components/Placeholder/placeholder.module.scss
@@ -1,6 +1,7 @@
+@import 'app/styles/mixins';
+
 .root {
-  height: 100vh;
-  max-height: -webkit-fill-available;
+  @include fill-screen-height;
   position: relative;
 }
 
