--- a/app/global.scss
+++ b/app/global.scss
@@ -1,12 +1,25 @@
+@import 'app/styles/mixins';
+
 :root {
-  --bone: #F4ECE0;
-  --dark-overlay: rgba(6, 4, 7, 0.5);
-  --dark: #1D1A1D;
-  --blood: #B73B24;
+  --bone-color: #F4ECE0;
+  --dark-overlay-color: rgba(6, 4, 7, 0.5);
+  --dark-color: #1D1A1D;
+  --blood-color: #B73B24;
+  --base-size: 4px;
+  --large-horizontal-padding: calc(var(--base-size) * 16);
+  --med-horizontal-padding: calc(var(--base-size) * 8);
+  --small-horizontal-padding: calc(var(--base-size) * 6);
+  --large-vertical-padding: calc(var(--base-size) * 20);
+  --med-vertical-padding: calc(var(--base-size) * 10);
+  --small-vertical-padding: calc(var(--base-size) * 8);
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
 body {
-  background-color: var(--dark);
+  background-color: var(--dark-color);
   margin: 0 auto;
   min-height: 100vh;
   min-height: -webkit-fill-available;
@@ -16,11 +29,11 @@ html {
   height: -webkit-fill-available;
   font-size: 16px;
 
-  @media screen and (min-width: 900px) {
+  @include min-width(medium) {
     font-size: 18px;
   }
-    
-  @media screen and (min-width: 1200px) {
+
+  @include min-width(large) {
     font-size: 20px;
   }
 }
