--- a/app/components/Details/details.module.scss
+++ b/app/components/Details/details.module.scss
@@ -20,10 +20,8 @@
 }
 
 .title {
+  @include section-title;
   color: var(--blood-color);
-  font-size: toRem(128);
-  line-height: 1.3;
-  margin-bottom: toRem(24);
 }
 
 .body {
