--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -64,3 +64,15 @@
     font-size: toRem(128);
   }
 }
+
+@function pow($number, $exponent) {
+  $value: 1;
+
+  @if $exponent > 0 {
+    @for $i from 1 through $exponent {
+      $value: $value * $number;
+    }
+  }
+
+  @return $value;
+}
