--- a/app/components/Splash2/splash.module.scss
+++ b/app/components/Splash2/splash.module.scss
@@ -21,7 +21,7 @@
 }
 
 
-$squares: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24;
+$squares: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13;
 
 .root {
   @include fill-screen-height;
