--- a/app/components/Header/header.module.scss
+++ b/app/components/Header/header.module.scss
@@ -1,5 +1,11 @@
 @import 'app/styles/mixins';
 
+@keyframes show-header {
+  100% {
+    opacity: 1;
+  }
+}
+
 .header {
   color: var(--light-color);
   left: 0;
@@ -7,6 +13,12 @@
   top: 0;
   width: 100%;
   z-index: 1;
+  opacity: 0;
+  animation-delay: $splash-duration;
+  animation-duration: 300ms;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in;
+  animation-name: show-header;
 }
 
 .dark {
