--- a/app/components/ThingsToDo/things-to-do.module.scss
+++ b/app/components/ThingsToDo/things-to-do.module.scss
@@ -1,22 +1,13 @@
 @import 'app/styles/mixins';
 
 .root {
-  @include section-padding;
-  align-items: center;
   background: var(--bone-color);
-  display: flex;
-  justify-content: center;
   max-width: 100%;
   min-height: 100vh;
 }
 
-.container {
-  margin: 0 auto;
-  width: 100%;
-
-  @include min-width(large) {
-    max-width: $breakpoint-large;
-  }
+.header {
+  padding: var(--vertical-padding) var(--horizontal-padding) toRem(64);
 }
 
 .title {
@@ -24,37 +15,67 @@
   color: var(--blood-color);
 }
 
-.body {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+.text {
+  font-size: toRem(20);
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  line-height: 1.25;
+  max-width: 684px;
+}
 
-  @include min-width(medium) {
-    flex-direction: row;
-    gap: 40px;
+.body {
+  width: 100vw;
+  overflow-x: scroll;
+}
+
+.list {
+  list-style-type: none;
+  padding: 0 var(--horizontal-padding) var(--vertical-padding);
+  margin: 0;
+  min-width: 100%;
+  display: flex;
+  width: fit-content;
+}
+
+.listItem {
+  flex: 0 0 300px;
+  margin-right: 24px;
+  min-width: 300px;
+  text-align: center;
+
+  &:last-child {
+    margin-right: 0;
   }
 }
 
-.video {
+.image {
+  aspect-ratio: 5000 / 5973;
+  background: gray;
   width: 100%;
+  margin-bottom: toRem(24);
 }
 
-.content {
-  flex: 1;
-}
-
-.subtitle {
-  color: var(--blood-color);
+.location {
   font-size: toRem(16);
   font-weight: 500;
   letter-spacing: 0.1em;
-  margin-bottom: toRem(16);
+  line-height: 1.25;
   text-transform: uppercase;
+  margin-bottom: toRem(16);
 }
 
-.text {
+.favorite {
+  color: var(--blood-color);
   font-size: toRem(24);
+  font-weight: 500;
   letter-spacing: 0.1em;
-  margin-bottom: toRem(54);
+  line-height: 1.25;
   text-transform: uppercase;
+  margin-bottom: toRem(16);
+}
+
+.description {
+  font-size: toRem(16);
+  font-weight: 500;
+  letter-spacing: 0.03em;
 }
