--- a/app/components/AttireGallery/attire-gallery.module.scss
+++ b/app/components/AttireGallery/attire-gallery.module.scss
@@ -39,31 +39,53 @@
 }
 
 .list {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: var(--horizontal-padding);
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: 100%;
 
   @include min-width(medium) {
-    column-count: 2;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    max-width: calc(400px * 2 + var(--horizontal-padding));
   }
 
   @include min-width(large) {
-    column-count: 3;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: calc(400px * 3 + calc(var(--horizontal-padding) * 2));
   }
 }
 
 .item {
-  margin-bottom: var(--horizontal-padding);
+  background: white;
+  display: block;
+  max-width: 400px;
+  width: 100%;
+  position: relative;
+
+  &:before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    padding-bottom: calc(1798 / 1500 * 100%);
+  }
 
   @include min-width(large) {
-    &:nth-child(5) {
-      padding-top: var(--horizontal-padding);
+    &:nth-child(3n + 2) {
+      top: var(--horizontal-padding);
     }
   }
 }
 
 .image {
-  height: auto;
-  max-width: 400px;
+  position: absolute;
+  top: 0;
   width: 100%;
+  height: 100%;
+  right: 0;
 }
