--- a/app/components/Header/header.module.scss
+++ b/app/components/Header/header.module.scss
@@ -51,7 +51,7 @@
 
 .menuContainer {
   background: var(--dark-color);
-  padding: toRem(40) var(--horizontal-padding);
+  padding: toRem(30) var(--horizontal-padding);
   position: relative;
   width: 100%;
   display: flex;
@@ -134,6 +134,7 @@
   width: 100%;
   transition: transform 0.5s ease-in-out;
   transform: translateY(-100%);
+  top: 0;
 
   @include min-width(medium) {
     transition: none;
