--- a/app/components/Details/details.module.scss
+++ b/app/components/Details/details.module.scss
@@ -58,3 +58,31 @@
   margin-bottom: toRem(54);
   text-transform: uppercase;
 }
+
+.buttonPanel {
+  display: flex;
+  gap: toRem(16);
+}
+
+.button {
+  max-width: 200px;
+  min-width: auto;
+  width: 100%;
+
+  @include min-width(medium) {
+    max-width: auto;
+    min-width: 200px;
+    width: auto;
+  }
+}
+
+.rsvpLink {
+  background-color: var(--dark-color);
+  color: var(--bone-color);
+
+  &:hover, &:focus {
+    background-color: var(--bone-color);
+    color: var(--dark-color);
+    border-color: var(--dark-color);
+  }
+}
