--- a/app/components/Details/details.module.scss
+++ b/app/components/Details/details.module.scss
@@ -59,21 +59,11 @@
   text-transform: uppercase;
 }
 
-.buttonPanel {
-  display: flex;
-  gap: toRem(16);
-  min-width: 0;
-}
-
-.button {
-  max-width: 200px;
-  min-width: 0;
-  width: 100%;
-
-  @include min-width(medium) {
-    max-width: auto;
-    min-width: 200px;
-    width: auto;
+.link {
+  color: var(--dark-color);
+  
+  &:hover {
+    color: var(--blood-color);
   }
 }
 
